tests/baselines/reference/destructuringSpread.errors.txt
destructuringSpread.ts(16,21): error TS2339: Property 'g' does not exist on type '{ f: number; e: number; d: number; c: number; }'.


==== destructuringSpread.ts (1 errors) ====
    const { x } = {
      ...{},
      x: 0
    };
    
    const { y } = {
      y: 0,
      ...{}
    };
    
    const { z, a, b } = {
      z: 0,
      ...{ a: 0, b: 0 }
    };
    
    const { c, d, e, f, g } = {
                        ~
!!! error TS2339: Property 'g' does not exist on type '{ f: number; e: number; d: number; c: number; }'.
      ...{
        ...{
          ...{
            c: 0,
          },
          d: 0
        },
        e: 0
      },
      f: 0
    };
    